--- a/DP/DP.csproj
+++ b/DP/DP.csproj
@@ -200,6 +200,7 @@
     <Content Include="lib\require\r.js" />
     <Content Include="lib\require\require.js" />
     <Content Include="lib\require\text.js" />
+    <Content Include="Share\Share.js" />
     <Content Include="wb1.html" />
     <Content Include="Web.config" />
   </ItemGroup>
