--- a/DP/DP.csproj
+++ b/DP/DP.csproj
@@ -66,10 +66,17 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\10004\10004.html" />
+    <Content Include="app\10004\10004.js" />
+    <Content Include="app\10003\10003.html" />
+    <Content Include="app\10003\10003.js" />
     <Content Include="app\10002\10002.html" />
     <Content Include="app\10002\10002.js" />
     <Content Include="app\10001\10001.js" />
     <Content Include="app\10001\10001.html" />
+    <Content Include="css\consolestyle.css" />
+    <Content Include="lib\consolejs\console.js" />
+    <Content Include="lib\consolejs\functions.js" />
     <Content Include="packages.config" />
     <Content Include="app\viewComposition\inlineModule" />
     <Content Include="app\widgets\Readme.md" />
@@ -201,6 +208,7 @@
     <Content Include="lib\require\require.js" />
     <Content Include="lib\require\text.js" />
     <Content Include="Share\Share.js" />
+    <Content Include="vmProvide.js" />
     <Content Include="wb1.html" />
     <Content Include="Web.config" />
   </ItemGroup>
